# sat-parser

./: README.md  pyproject.toml  soap-parser.code-workspace
data/csv/: starlink.csv
data/orb/: martian_scenario.orb
data/templates/: analysis_report.orb  base_v14.orb  base_v15.orb  link.orb
soap-utils/: matrix.py  orb_builder.py  orb_parser.py  os_utils.py  report_parser.py  soap_utils.py
src/: matrix.py  report_parser.py
src/soap_parser/: matrix.py  orb_builder.py  orb_parser.py  os_utils.py  report_parser.py  soap_utils.py  tvg.py  visualization.py
src/soap_parser/data/csv/: _tdrss.csv  geo.csv  mars.csv  moon.csv  tdrss.csv
src/soap_parser/data/orb/: lunar_scenario.orb  lunar_scenario_ground.orb
src/soap_parser/data/templates/: analysis_report.orb  analysis_variable.orb  base_v15.orb  observer_view.orb  platform_custom.orb  platform_ground.orb  platform_norad.orb
src/soap_parser/data/tle/: geo.tle  tdrss.tle
